--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -57,7 +57,7 @@
               <% end %>
             </tbody>
           </table>
-          <%# <%== pagy_nav(@pagy) if @pagy.pages > 1 %> %>
+          <%== pagy_nav(@pagy) if @pagy.pages > 1 %>
         </div>
       </div>
     </div>
